<resources>
    <string name="app_name">RestaurantsTestApp</string>
    <!-- my default texts -->
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="start">Start</string>
    <string name="error">An error occurs, please try again…</string>
    <string name="time_out_error">time out error</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="BallSpinFadeLoaderIndicator">BallSpinFadeLoaderIndicator</string>
    <string name="newNotification">You have a new notification</string>
    <string name="must_login">You must be logged in to continue!</string>
    <string name="login">Login</string>
    <string name="login_successful">Login Successful</string>
    <string name="alert">Attention</string>
    <string name="cancel">Cancel</string>
    <string name="isRequired">This field is required</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>
    <string name="isRequiredF">This field is required</string>
    <string name="noInternetConnection">Check your internet connection.</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="password_invalid">Weak password was entered .. Password must contain at least 6 Characters</string>
    <string name="password_missmatch">Password and confirm password are not match</string>
    <string name="permission_denied">Permission denied.\nYou don\'t able to add image!!</string>
    <string name="permission_not_granted_error"> You must give this application this permission in order to function properl </string>
    <string name="gps_not_granted_error"> You must turn on GPS to continue </string>
    <string name="added_successfully">Added Successfully</string>
    <string name="mobile_invalid_error">Mobile number is invalid</string>
    <string name="are_you_sure_to_logout">Are you sure you want to sign out?</string>
    <string name="loginMsg">You must login to continue !</string>
    <string name="not_developed">Not Developed</string>
    <string name="error_date_current">You must select to time larger than from time</string>
    <string name="distance_format">%s Km</string>
    <string name="select_image_dialog_user_camera">Camera</string>
    <string name="select_image_dialog_from_album">Gallery</string>
    <string name="error_name">Username is required</string>
    <string name="error_first_name">First Name is required</string>
    <string name="error_last_name">Last Name is required</string>
    <string name="error_mobile">User mobile is required</string>
    <string name="error_address">User address is required</string>
    <string name="error_gender">User gender is required</string>
    <string name="error_dob">User birthday is required</string>
    <string name="error_country">User country is required</string>
    <string name="error_city">City is required</string>
    <string name="error_email">Email is required</string>
    <string name="error_valid_email">Please enter a valid email</string>
    <string name="error_old_password">Old password is required</string>
    <string name="error_password">Password is required</string>
    <string name="error_week_password">Week password was entered.\n Password must contains at least 6 characters</string>
    <string name="error_conf_password">Confirm Password is required</string>
    <string name="error_match_password">The password and confirmation \n password must match</string>
    <string name="no_user_found">Cannot find user data in database</string>
    <string name="msg_clear_token_failed">Please try again so you can log off</string>
    <string name="checkEmail">reset password link send to your email address</string>
    <string name="pass_email_invalid">Sorry!! Wrong Email or Password</string>
    <string name="emailInvalid">This account was not found</string>
    <string name="ERR_emailExist">This email already exists</string>
    <string name="verify_email">Your account has been created successfully. Please check your inbox</string>
    <string name="please_verify_email">Please verify your email, check your inbox</string>
    <string name="update_success">Your account has been Updated successfully</string>
    <string name="skip">Skip>></string>
    <string name="welcome_back">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="login_with_facebook">Facebook</string>
    <string name="or_sign_up_with_email">or sign up with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="you_don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="search_text">What are you looking for?</string>
    <string name="failed_to_get_restaurant_data">Failed to Get Restaurant Data</string>
    <string name="menu">Menu</string>
    <string name="priceFormat" formatted="false">$%s</string>
    <string name="percent" formatted="false">%s%%</string>
    <string name="quantityFormat" formatted="false">Q: %s</string>
    <string name="add_to_order">Add to Order</string>
    <string name="chicken_livers_peri_peri">Chicken Livers Peri-Peri</string>
    <string name="title_description">Description</string>
    <string name="example_description">If you’ve ever eaten chicken liver pate/mousse/spread, and liked it, you will LOVE chicken livers cooked in this spicy peri-peri sauce.  I have turned many a chicken liver-hater into chicken liver-lovers with this recipe.</string>
    <string name="size">Options</string>
    <string name="add_note">Add Note</string>
    <string name="ingredient">Ingredient</string>
    <string name="attention_free_hint" formatted="false"> You can add %s free ingredient(s), and any extra ingredient will cost $%s for each.</string>
    <string name="ex_ingredient">2 tablespoons butter</string>
    <string name="toppings">Toppings</string>
    <string name="ingredients">Ingredients</string>
    <string name="check_out">Check Out</string>
    <string name="are_you_sure_this_is_your_order">Are you sure this is your order</string>
    <string name="order_number">Order #485948</string>
    <string name="the_order_number">The order will take 30 minutes to be ready.</string>
    <string name="view_invoice">View Invoice</string>
    <!--View Invoice Screen-->
    <string name="ordered_at">ORDERED AT:</string>
    <string name="deliver_at">DELIVERED AT:</string>
    <string name="duration">DURATION:</string>
    <string name="job_id">Order Id:</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="market_name">Market Name</string>
    <string name="coupon_number">Coupon  Number</string>
    <string name="item">Item</string>
    <!--Item details Screen -->
    <string name="item_details">Item details </string>
    <string name="quantity">Quantity</string>
    <string name="description">Description </string>
    <string name="notes">Notes</string>
    <string name="price">Price</string>
    <string name="write_here">Write here</string>

    <!--Order details Screen-->
    <string name="order_summary">Order Summary</string>
    <string name="select_day">Select Day</string>
    <string name="subtotal">SUBTOTAL :</string>
    <string name="discount_ca">DISCOUNT. :</string>
    <string name="tax">TAX(%%%s)</string>
    <string name="tax_2">TAX(%s)</string>
    <string name="tax_3">TAX</string>
    <string name="percentage_f">%% %s</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="total">TOTAL :</string>

</resources>