<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layoutDirection="ltr"
    tools:context=".features.logIn.view.LogInActivity">

    <ScrollView
        android:id="@+id/sl_signin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="none"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:orientation="vertical"
                android:paddingStart="@dimen/layout_margin"
                android:paddingBottom="@dimen/editTextMarginInside">

                <TextView
                    android:id="@+id/tv_skip"
                    style="@style/NormalTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="@dimen/editTextMarginInside"
                    android:drawablePadding="@dimen/layout_margin"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/layout_margin"
                    android:paddingEnd="@dimen/smallPadding"
                    android:text="@string/skip"
                    android:textColor="@color/colorAccent" />

                <ImageView
                    android:layout_width="@dimen/logoDimenSmall"
                    android:layout_height="@dimen/logoDimenSmall"
                    android:src="@drawable/ic_logo" />

                <TextView
                    style="@style/HeaderTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/editTextPadding"
                    android:gravity="start|center_vertical"
                    android:padding="0dp"
                    android:text="@string/welcome_back"
                    android:textSize="@dimen/textSizeExtraLarge" />

                <TextView
                    style="@style/HeaderTextViewStyle"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="start|center_vertical"
                    android:padding="0dp"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@color/grayBold"
                    android:textSize="@dimen/textSizeNormal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editTextMarginInside"
                android:layout_marginEnd="@dimen/editTextMarginInside"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:background="@drawable/custom_btn_blue"
                    android:gravity="center"
                    android:padding="@dimen/smallPadding"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="@dimen/iconMiniHeight"
                        android:layout_height="@dimen/iconMiniHeight"
                        android:layout_margin="@dimen/layout_margin"
                        app:srcCompat="@drawable/ic_facebook" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/login_with_facebook"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSizeSmall" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/or_sign_up_with_email"
                    android:textColor="@color/gray_txt"
                    android:textSize="@dimen/textSizeSmall" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/editTextMarginInside"
                    android:background="@drawable/custom_ed_white_border"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/padding"
                        app:srcCompat="@drawable/ic_email" />

                    <EditText
                        android:id="@+id/ed_email"
                        style="@style/EditTextStyle"
                        android:background="@null"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="0dp"
                        android:paddingTop="@dimen/padding"
                        android:paddingEnd="0dp"
                        android:paddingBottom="@dimen/padding" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/editTextMarginInside"
                    android:background="@drawable/custom_ed_white_border"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/padding"
                        app:srcCompat="@drawable/ic_password" />

                    <EditText
                        android:id="@+id/ed_password"
                        style="@style/EditTextStyle"
                        android:background="@null"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingStart="0dp"
                        android:paddingTop="@dimen/padding"
                        android:paddingEnd="0dp"
                        android:paddingBottom="@dimen/padding" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_forgot_password"
                    style="@style/TextViewStyle"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/forget_password"
                    android:textSize="@dimen/textSizeSmall" />

                <Button
                    android:id="@+id/btn_signin"
                    style="@style/GradientButtonStyle"
                    android:layout_marginTop="@dimen/marginTopViews"
                    android:text="@string/login"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_skip"
                    style="@style/WhiteButtonStyle"
                    android:layout_marginTop="@dimen/padding"
                    android:text="@string/skip"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extraMargin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/you_don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeSmall" />

                <TextView
                    android:id="@+id/tv_click_signup"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_margin="0dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorAccentText"
                    android:textSize="@dimen/textSizeSmall" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>




