<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:textDirection="ltr"
    tools:context=".features.ViewInvoice.view.ViewInvoiceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_gravity="start"
                android:background="@null"
                app:srcCompat="@drawable/ic_back"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/HeaderTextViewStyle"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/view_invoice"
                android:textAllCaps="true" />

            <ImageButton
                android:id="@+id/ib_print"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:background="@null"
                android:src="@drawable/ic_printer"
                android:visibility="visible"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/margin_left_right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginTop="@dimen/extraMargin"
            android:layout_marginEnd="@dimen/normalMargin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/full_border_white"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/NormalTextViewStyle"
                        android:text="@string/job_id"
                        android:textColor="@color/text_color_40" />

                    <TextView
                        android:id="@+id/tv_id"
                        style="@style/NormalTextViewStyle"
                        android:textColor="@color/text_color_40"
                        tools:text="2658941" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/normalMargin"
                    android:layout_marginEnd="@dimen/normalMargin"
                    android:background="@color/line_6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/NormalTextViewStyle"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/ordered_at"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/tv_orderAt"
                        style="@style/NormalTextViewStyle"
                        android:gravity="end"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        tools:text="9:30AM, 15 NOV 2018" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/NormalTextViewStyle"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/deliver_at"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/tv_deliverAt"
                        style="@style/NormalTextViewStyle"
                        android:gravity="end"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        tools:text="11:30AM, 15 NOV 2018" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/NormalTextViewStyle"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/duration"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/tv_duration"
                        style="@style/NormalTextViewStyle"
                        android:gravity="end"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        tools:text="1h:30m" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normalMargin"
                    android:background="@drawable/full_border_white"
                    android:orientation="vertical"
                    android:padding="@dimen/layout_margin">

                    <TextView
                        style="@style/NormalTextViewStyle"
                        android:layout_width="match_parent"
                        android:background="@drawable/undrline_light"
                        android:gravity="start"
                        android:text="@string/price"
                        android:textColor="@color/text_color_40" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="@dimen/normalMargin"
                        android:layout_marginEnd="@dimen/normalMargin"
                        android:background="@color/line_6" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/smallMargin"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/NormalTextViewStyle"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/subtotal" />

                        <TextView
                            android:id="@+id/tv_subtotal"
                            style="@style/NormalTextViewStyle"
                            tools:text="5.35 QAR" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/NormalTextViewStyle"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/discount_ca" />

                        <TextView
                            android:id="@+id/tv_discount"
                            style="@style/NormalTextViewStyle"
                            android:text="0.0" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_tax_percentage"
                            style="@style/NormalTextViewStyle"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/tax" />

                        <TextView
                            android:id="@+id/tv_tax"
                            style="@style/NormalTextViewStyle"
                            android:text="0.0" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/NormalTextViewStyle"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/total" />

                        <TextView
                            android:id="@+id/tv_totalPrice"
                            style="@style/NormalTextViewStyle"
                            android:text="5.35 QAR" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>